--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,16 @@
 env:
   selected: dev
-  excluded: [dev, uat, prod]
+  excluded: []
 src:
   name: /Users/wangsenyuan/git/work/
   suffix: java
 dest:
-  type: file
+  type: batch
   name: /tmp/maycur-batch
   ns-processor:
     old-ns: maycur
     new-ns: dev
+  remove-copyright: true
+  file-line-limit: 4000
   remove-comment: true
 
